--- a/package.json
+++ b/package.json
@@ -1,27 +1,40 @@
 {
-  "name": "socialmedia",
-  "version": "1.0.0",
-  "description": "beckend nodejs form socialmedia app",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
-  },
-  "keywords": [
-    "son"
-  ],
-  "author": "Son",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.3",
-    "@babel/node": "^7.23.9",
-    "@babel/preset-env": "^7.24.3",
-    "nodemon": "^3.1.0"
-  }
+    "name": "socialmedia",
+    "version": "1.0.0",
+    "description": "beckend nodejs form socialmedia app",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon src/server.js"
+    },
+    "keywords": [
+        "son"
+    ],
+    "author": "Son",
+    "license": "ISC",
+    "dependencies": {
+        "app-root-path": "^3.1.0",
+        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.2",
+        "cookie": "^0.6.0",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "ejs": "^3.1.9",
+        "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.2.4",
+        "multer": "^1.4.5-lts.1",
+        "prettier": "^3.2.5"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.24.3",
+        "@babel/node": "^7.23.9",
+        "@babel/preset-env": "^7.24.3",
+        "husky": "^9.0.11",
+        "lint-staged": "^15.2.2",
+        "morgan": "^1.10.0",
+        "nodemon": "^3.1.0"
+    }
 }
